@@ -1670,3 +1670,5 @@ ${for %%a in (*.exe) do echo %%a}
 	- Fixed typos with i18n.
 	
 	- Removed unnecessary config.h.in from repository.
+	
+	- Fixed goto command ignoring bAbortCommad.
